--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,36 @@
+body{ 
+    background-image: url(https://th.bing.com/th/id/OIP.-UYNeS1F03PlfBA7PFwXYgAAAA?rs=1&pid=ImgDetMain) 
+  }
 body{
-    background-color:rgb(61, 169, 227);
+    background-color:rgb(120, 192, 231);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+}    
 h1{
     text-align: center;
     font-size: 70px;
     font-family: sans-serif;
 }
+h1{
+    text-align: center;
+    font-size: 70px;
+    font-family: sans-serif;
+}
+p{
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+}
+div{
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+}
+.caja-configurada {
+    width: 40%; /* Ajusta el ancho de la imagen al 100% del contenedor */
+    height: 40%; /* Mantiene la proporción de la imagen */
+    display: block; /* Hace que la imagen sea un bloque para poder centrarla */
+    margin: 0 auto; /* Centra la imagen horizontalmente */
+    border: 3px solid #000; /* Añade un borde negro de 2px */
+  }
